Add docker service endpoints
