# node-agent/swagger.json
@@ -25,6 +25,10 @@
     {
       "name": "ping",
       "description": "Ping to other machines"
+    },
+    {
+      "name": "docker",
+      "description": "Get docker stats and apply resource limiations to containers"
     }
   ],
   "schemes": [
@@ -151,6 +155,90 @@
             "schema": {
               "$ref": "#/definitions/ping_single"
             }
+          },
+          "500": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
+    "/docker/stats": {
+      "get": {
+        "tags": [
+          "docker"
+        ],
+        "summary": "Get docker stats",
+        "operationId": "getDockerStats",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Get memory and cpu stats per container",
+            "schema": {
+              "$ref": "#/definitions/docker_stats"
+            }
+          },
+          "500": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
+    "/docker/mcrlist": {
+      "put": {
+        "tags": [
+          "docker"
+        ],
+        "summary": "Sets container resource limitations",
+        "operationId": "setMCR",
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "A list of machine resource configurations",
+            "schema": {
+              "$ref": "#/definitions/mcrlist"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Update successful"
+          },
+          "500": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "docker"
+        ],
+        "summary": "Get the currently applied machine resource configurations",
+        "operationId": "getMCR",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "The currently applied tcconfig",
+            "schema": {
+              "$ref": "#/definitions/mcrlist"
+            }
           }
         }
       }
@@ -230,6 +318,54 @@
           },
           "time": {
             "type": "integer"
+          }
+        }
+      }
+    },
+    "docker_stats": {
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "container_name": {
+            "type": "string"
+          },
+          "memory": {
+            "type": "object",
+            "properties": {
+              "raw": {
+                "type": "string",
+                "example": "30.4 MiB / 2.45 GiB"
+              },
+              "percent": {
+                "type": "string",
+                "example": "1.24%"
+              }
+            }
+          },
+          "cpu": {
+            "type": "string",
+            "example": "40.5%"
+          }
+        }
+      }
+    },
+    "mcrlist": {
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "container_name": {
+            "type": "string"
+          },
+          "cpu": {
+            "type": "number",
+            "example": 2
+          },
+          "memory": {
+            "type": "string",
+            "description": "Memory that should be availalbe to the container + unit: b, k, m, g; indicate bytes, kilobytes, megabytes, and gigabytes)",
+            "example": "400m"
           }
         }
       }
